--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
+    "main": "app.js",
+    "type": "module",
+    "scripts": {
+      "start": "node app.js"
+    },
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^8.2.0",
     "nodemon": "^3.1.0"
   }
+    
 }
